# dialectica

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  README.zh-CN.md  pyproject.toml
.claude/: settings.json
.git-agent/: config.yml
.github/workflows/: release.yml  test.yml
dialectic/: .env.example
dialectica/: __init__.py  adk_config.py  agent.py  agent_factory.py  agent_runtime.py  agentic.py  coordinator.py  dialectic.py  ensemble.py  gan_evaluator.py  generation.py  json_repair.py  llm_config.py  models.py  protocols.py  repair.py  selection.py  synthesis.py  validation.py  workflow.py  workflow_journal.py  workflow_registry.py  workflow_worktree.py
docs/plans/2026-06-26-multi-llm-orchestration-design/: _index.md  architecture.md  bdd-specs.md  best-practices.md  evaluation-design-round-1.md  evaluation-design-round-2.md
docs/plans/2026-06-26-multi-llm-orchestration-plan/: _index.md  handoff-state.md  handoff-summary-1.md  handoff-summary-2.md  handoff-summary-3.md  sprint-contract-batch-1.md  sprint-contract-batch-2.md  sprint-contract-batch-3.md  task-001-setup.md  task-002-ensemble-impl.md  task-002-ensemble-test.md  task-003-repair-multimodel-impl.md  task-003-repair-multimodel-test.md  task-004-ensemble-ablation.md
evals/: __init__.py  __main__.py  access_list_scale.py  agentic_eval.py  code_eval.py  code_problems.py  ensemble_ablation.py  ensemble_meta_ablation.py  game24.py  game24_princeton.py  hard_problems.py  hard_solutions.py  harness.py  judge.py  lcb.py  meta_problems.py  novel_problems.py  novel_solutions.py  quality_ablation.py  quality_workflow_ablation.py  reflection_ablation.py  repair_ablation.py  score_workflow.sh  workflow_ablation.py
examples/: __init__.py
examples/patterns/: __init__.py  _scoring.py  agentic_pattern.py  dialectic_pattern.py  ensemble_pattern.py  quality_workflow_pattern.py  reflection_pattern.py  tot_gan_pattern.py
multi_tool_agent/: coordinator.py
src/mas_tree_of_thought/: instructions.py
tests/: conftest.py  helpers.py  test_adk_runtime.py  test_agent_factory.py  test_agent_runtime.py  test_agentic_feature.py  test_code_eval_feature.py  test_coordinator.py  test_coordinator_helpers.py  test_default_pipeline.py  test_dialectic_feature.py  test_e2e_access_list_live.py  test_e2e_live.py  test_engine_feature.py  test_ensemble_feature.py  test_eval_feature.py  test_eval_harness.py  test_eval_live.py  test_evaluation_feature.py  test_example_patterns_smoke.py  test_game24_feature.py  test_gan_evaluator.py  test_generation.py  test_lcb_eval_feature.py  test_models.py  test_quality_ablation_feature.py  test_repair_feature.py  test_resilience_feature.py  test_workflow_feature.py  test_workflow_resume_feature.py
tests/features/: adversarial_evaluation.feature  agentic.feature  code_eval.feature  dialectic.feature  engine.feature  ensemble.feature  eval_harness.feature  game24.feature  quality_ablation.feature  repair.feature  resilience.feature  workflow.feature  workflow_resume.feature
