[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dialectica"
version = "0.7.0"
description = "A reasoning-engine toolbox: a composable Workflow kernel (agent/parallel/pipeline) plus an execution-guided repair engine (generate -> verify -> repair)."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Frad LEE", email = "fradser@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "google-adk>=2.3.0",
    "litellm>=1.66.0",
    "pydantic>=2.11.3",
]

[dependency-groups]
dev = [
    "huggingface-hub>=1.17.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-bdd>=8.1.0",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.16",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
# Skip the live-API E2E test by default; opt in with `uv run pytest -m e2e`.
addopts = "-m 'not e2e'"
markers = [
    "e2e: end-to-end test that calls the real Gemini API (requires GOOGLE_API_KEY)",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
# pyflakes (F) + pycodestyle (E) are on by default; add isort import sorting.
extend-select = ["I"]

[tool.hatch.build.targets.wheel]
packages = ["dialectica"]
